# gtfs2kml

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
examples/: example_usage.py  road_snapping_example.py
src/gtfs2kml/: __init__.py  cli.py  gtfs_parser.py  kml_generator.py  models.py  road_snapper.py
tests/: test_models.py
